fixed layout issues

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -9,7 +9,7 @@
   }
 
   h1 {
-    color: #fff;
+    color: black;
     font-size: 40px;
     line-height: 53px;
     margin: 0;
@@ -77,5 +77,20 @@
       background: #ffd700;
       color: #333;
     }
+
+  
+    
+  }
+
+  .background-image {
+    position: absolute;
+    top: 40;
+    left: 50;
+    width: 100%;
+    height: 100%;
+    background-image: url("../../assets/images/Background.jpg");
+    background-size: cover;
+    background-position: center;
+    opacity: 0.7;
   }
 }
